--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,23 @@ body{
 margin: 20px;
 color: black;
 }
+
+.myimg{
+margin-left: 140px;
+}
+
+.mytitel{
+    font-size: 54px;
+    font-weight: 600;
+    line-height: 1.2;
+letter-spacing: -1px;
+margin: 0 0 20px;
+}
+
+.myparagraf{
+    font-family: Poppins;
+    font-size: 14px;
+    margin: 0 0 25px;
+    font-weight: 600;
+    line-height: 1.5;
+}
